--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "new-profile-build",
-  "version": "0.1.0",
+  "name": "portfolio",
+  "homepage": "https://tonybanuchi.github.io/portfolio",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -15,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "postcss": "^8.5.3",
@@ -32,7 +34,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
-    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
