--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "portfolio",
-  "homepage": "https://tonybanuchi.github.io/portfolio",
   "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
-    "gh-pages": "^6.3.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "postcss": "^8.5.3",
